tests/fixtures/errors/invalid_preproc_procedure_unsupported.puml
@startuml
!procedure Build($x)
!endprocedure
Alice -> Bob: %Build("A")
@enduml
